--- a/public/css/trumps/_utilities.scss
+++ b/public/css/trumps/_utilities.scss
@@ -1,3 +1,8 @@
 // ----------------------------------------------
 // Trumps - Utilities
 // ----------------------------------------------
+
+.fal {
+    -webkit-text-fill-color: $white;
+    fill: $white !important;
+}
