--- a/public/html/components/header.html
+++ b/public/html/components/header.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../../css/main.css">
     <script src="main.js"></script>
 </head>
+
 <body>
     <div class="navigation">
         <div class="navigation__container">
@@ -16,14 +18,15 @@
             </div>
             <div class="navigation__person">
                 <span>
-                    Hello,<span>Brandon</span> !
+                    Hello <span>Brandon</span> !
                 </span>
             </div>
-            <div class="navigation__settings">
-                <i>Settings Icon</i>
-            </div>
+            <button class="navigation__settings">
+                <i class="fal fa-cog fa-3x"></i>
+            </button>
 
         </div>
     </div>
 </body>
+
 </html>
