cleaned views, added artists to home page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
     <link rel="stylesheet"  type="text/css" href="/main.css">
     <style type="text/css">
       #login, #loggedin {
-        display: none;
+        display: block;
       }
       .text-overflow {
         overflow: hidden;
@@ -31,7 +31,7 @@
       </div>
     </div>
 
-    <script id="user-profile-template" type="text/x-handlebars-template">
+    <div id="user-profile-template">
       <h1>Logged in as {{display_name}}</h1>
       <div class="media">
         <div class="pull-left">
@@ -50,15 +50,15 @@
           </dl>
         </div>
       </div>
-    </script>
+    </div>
 
-    <script id="oauth-template" type="text/x-handlebars-template">
+    <div id="oauth-template">
       <h2>oAuth info</h2>
       <dl class="dl-horizontal">
         <dt>Access token</dt><dd class="text-overflow">{{access_token}}</dd>
         <dt>Refresh token</dt><dd class="text-overflow">{{refresh_token}}</dd>
       </dl>
-    </script>
+    </div>
 
     {{!-- <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script> --}}
     <script type="text/javascript" src="/bundle.js"></script>
