--- a/src/css/components/_grid.scss
+++ b/src/css/components/_grid.scss
@@ -5,7 +5,7 @@
 $grid:(columns: 12, gutter: 0);
 
 .main {
-    height: 100vh;
+    height: 95vh;
     // padding-top: 80px;
     background-color: $white;
     overflow: hidden;
@@ -19,7 +19,7 @@ $grid:(columns: 12, gutter: 0);
 
         .filter {
             @include grid-column(12, $grid);
-            height: 150px;
+            height: 8vh;
             border-bottom: 1px solid rgba($black, 0.2);
             box-shadow: 0 0 4px 0 rgba($black, 0.2);
 
@@ -47,30 +47,33 @@ $grid:(columns: 12, gutter: 0);
                 outline: none;
                 opacity: 0.7;
                 transition: opacity .2s;
+
                 &:hover {
                     opacity: 1;
                 }
+
                 &::-webkit-slider-thumb {
                     appearance: none;
                     width: 15px;
                     height: 15px;
-                    border-radius: 50%; 
-                    background: $black; 
+                    border-radius: 50%;
+                    background: $black;
                     cursor: pointer;
                 }
+
                 &::-moz-range-thumb {
-                    width: 15px; 
-                    height: 15px; 
-                    border-radius: 50%; 
-                    background: $black; 
-                    cursor: pointer; 
+                    width: 15px;
+                    height: 15px;
+                    border-radius: 50%;
+                    background: $black;
+                    cursor: pointer;
                 }
             }
         }
 
         .sidebar {
             width: 300px;
-            height: calc(100vh - 80px);
+            height: calc(100vh - 8vh);
             border-right: 1px solid rgba($black, 0.2);
             overflow: hidden;
             position: relative;
@@ -99,7 +102,12 @@ $grid:(columns: 12, gutter: 0);
                 border-radius: 50%;
                 width: 45px;
                 height: 45px;
-                border: 1px solid rgba($black, 0.3%);
+
+                > img {
+                    width: 45px;
+                    height: 45px;
+                    border-radius: 50%;
+                }
             }
 
             &__info {
@@ -109,8 +117,8 @@ $grid:(columns: 12, gutter: 0);
                 >span {
                     font-family: $font;
                     font-weight: bold;
-                    font-size: 18px;
-                    font-size: 18px;
+                    font-size: 16px;
+                    font-size: 16px;
                 }
             }
 
@@ -141,7 +149,7 @@ $grid:(columns: 12, gutter: 0);
 
         .map {
             @include grid-column(10, $grid);
-            height: calc(100vh - 80px);
+            height: calc(100vh - 8vh);
 
             &__continer {}
         }
