--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -5,7 +5,7 @@
 .navigation {
     &__container {
         width: 100%;
-        height: 80px;
+        height: 5vh;
         display: flex;
         background-color: $black;
         padding: 0 30px;
