--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,4 @@
-{{> header}}
-{{!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -8,9 +7,4 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
-<body> --}}
-    {{{ body }}}
-{{!-- </body>
-</html> --}}
-
-{{> footer}}
+<body>
