--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,45 +1,82 @@
-  <body>
-    <div class="container">
-      <div id="login">
-        <h1>This is an example of the Authorization Code flow</h1>
-        <a href="/login" class="btn btn-primary">Log in with Spotify</a>
-      </div>
-      <div id="loggedin">
-        <div id="user-profile">
-        </div>
-        <div id="oauth">
-        </div>
-        <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button>
-      </div>
+<div class="login">
+    <div class="login__title">
+      <h2>{{ title }}</h2>
     </div>
-
-    <div id="user-profile-template">
-      <h1>Logged in as {{display_name}}</h1>
-      <div class="media">
-        <div class="pull-left">
-          <img class="media-object" width="150" src="{{images.0.url}}" />
-        </div>
-        <div class="media-body">
-          <dl class="dl-horizontal">
-            <dt>Display name</dt><dd class="clearfix">{{display_name}}</dd>
-            <dt>Id</dt><dd>{{id}}</dd>
-            <dt>Email</dt><dd>{{email}}</dd>
-            <dt>Spotify URI</dt><dd><a href="{{external_urls.spotify}}">{{external_urls.spotify}}</a></dd>
-            <dt>Link</dt><dd><a href="{{href}}">{{href}}</a></dd>
-            <dt>Profile Image</dt><dd class="clearfix"><a href="{{images.0.url}}">{{images.0.url}}</a></dd>
-            <dt>Country</dt><dd>{{country}}</dd>
-            <dt>Artists</dt><dd>{{ items.0.name }}</dd>
-          </dl>
-        </div>
+  <div class="form__container">
+    <form class="form" method="POST" action="/registered">
+      <div class="form__element">
+        <label for="username">Username</label>
+        <input type="text" class="" name="username" placeholder="username">
       </div>
-    </div>
+      <div class="form__element">
+        <label for="email">Email address</label>
+        <input type="email" class="" name="email" placeholder="Your Email">
+      </div>
+      <div class="form__element">
+        <label for="password">Password</label>
+        <input type="password" class="" name="password" placeholder="Enter a Password">
+      </div>
+      <div class="form__element">
+        <label for="passwordMatch">Re-Enter Password</label>
+        <input type="password" class="" name="passwordMatch" placeholder="Re-enter your Password">
+      </div>
+      <button type="submit" class="form__submit">Submit</button>
+    </form>
 
-    <div id="oauth-template">
-      <h2>oAuth info</h2>
+  </div>
+</div>
+{{!-- <div class="container">
+  <div id="login">
+    <h1>This is an example of the Authorization Code flow</h1>
+    <a href="/login" class="btn btn-primary">Log in with Spotify</a>
+  </div>
+  <div id="loggedin">
+    <div id="user-profile">
+    </div>
+    <div id="oauth">
+    </div>
+    <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button>
+  </div>
+</div>
+
+<div id="user-profile-template">
+  <h1>Logged in as {{display_name}}</h1>
+  <div class="media">
+    <div class="pull-left">
+      <img class="media-object" width="150" src="{{images.0.url}}" />
+    </div>
+    <div class="media-body">
       <dl class="dl-horizontal">
-        <dt>Access token</dt><dd class="text-overflow">{{access_token}}</dd>
-        <dt>Refresh token</dt><dd class="text-overflow">{{refresh_token}}</dd>
+        <dt>Display name</dt>
+        <dd class="clearfix">{{display_name}}</dd>
+        <dt>Id</dt>
+        <dd>{{id}}</dd>
+        <dt>Email</dt>
+        <dd>{{email}}</dd>
+        <dt>Spotify URI</dt>
+        <dd><a href="{{external_urls.spotify}}">{{external_urls.spotify}}</a></dd>
+        <dt>Link</dt>
+        <dd><a href="{{href}}">{{href}}</a></dd>
+        <dt>Profile Image</dt>
+        <dd class="clearfix"><a href="{{images.0.url}}">{{images.0.url}}</a></dd>
+        <dt>Country</dt>
+        <dd>{{country}}</dd>
+        <dt>Artists</dt>
+        <dd>{{ items.0.name }}</dd>
       </dl>
     </div>
+  </div>
+</div>
 
-<script type="text/javascript" src="/bundle.js"></script>
+<div id="oauth-template">
+  <h2>oAuth info</h2>
+  <dl class="dl-horizontal">
+    <dt>Access token</dt>
+    <dd class="text-overflow">{{access_token}}</dd>
+    <dt>Refresh token</dt>
+    <dd class="text-overflow">{{refresh_token}}</dd>
+  </dl>
+</div> --}}
+
+{{!--
+<script type="text/javascript" src="/js/bundle.js"></script> --}}
