--- a/src/css/trumps/_utilities.scss
+++ b/src/css/trumps/_utilities.scss
@@ -2,7 +2,7 @@
 // Trumps - Utilities
 // ----------------------------------------------
 
-.fal {
+.far {
     -webkit-text-fill-color: $white;
     fill: $white !important;
 }
