--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,27 +1,1 @@
-<div class="login">
-    <div class="login__title">
-      <h2>{{ title }}</h2>
-    </div>
-  <div class="form__container">
-    <form class="form" method="POST" action="/register">
-      <div class="form__element">
-        <label for="username">Username</label>
-        <input type="text" class="" name="username" placeholder="username">
-      </div>
-      <div class="form__element">
-        <label for="email">Email address</label>
-        <input type="email" class="" name="email" placeholder="Your Email">
-      </div>
-      <div class="form__element">
-        <label for="password">Password</label>
-        <input type="password" class="" name="password" placeholder="Enter a Password">
-      </div>
-      <div class="form__element">
-        <label for="passwordMatch">Re-Enter Password</label>
-        <input type="password" class="" name="passwordMatch" placeholder="Re-enter your Password">
-      </div>
-      <button type="submit" class="form__submit">Submit</button>
-    </form>
-
-  </div>
-</div>
+<h2>Index Page</h2>
