--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,4 +8,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
 </head>
+
 <body>
+    <div class="navigation">
+        <div class="navigation__container">
+            <div class="navigation__logo">
+                <a href="/">Concert Me</a>
+            </div>
+            <div class="navigation__person">
+                {{#if isAuthenticated}}
+                <span>
+                    Welcome Brandon! {{ display_name }}
+                </span>
+                {{else}}
+                <span>
+                    Join us!
+                </span>
+                {{/if}}
+            </div>
+            <div class="navigation__links">
+                <ul>
+                    {{#if isAuthenticated}}
+                    <li>
+                        <a href="/profile">Profile</a>
+                    </li>
+                    <li>
+                        <a href="/logout">Logout</a>
+                    </li>
+                    {{else}}
+                    <li>
+                        <a href="/register">Register</a>
+                    </li>
+                    <li>
+                        <a href="/login">Login</a>
+                    </li>
+                    {{/if}}
+                </ul>
+            </div>
+        </div>
+    </div>
