--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -18,7 +18,7 @@
             <div class="navigation__person">
                 {{#if isAuthenticated}}
                 <span>
-                    Welcome Brandon! {{ display_name }}
+                    Welcome {{ user.username }}!
                 </span>
                 {{else}}
                 <span>
