--- a/src/css/elements/_form-elements.scss
+++ b/src/css/elements/_form-elements.scss
@@ -38,6 +38,20 @@
                 outline: none;
             }
         }
+        select {
+            width: 100%;
+            padding: 5px;
+            font-size: 16px;
+            border-radius: 0;
+            border: 1px solid $black;
+            background-color: transparent;
+            &:focus {
+                outline: none;
+            }
+            &:hover {
+                cursor: pointer;
+            }
+        }
 
     }
 
