--- a/src/css/settings/_typography.scss
+++ b/src/css/settings/_typography.scss
@@ -18,6 +18,6 @@
   font-style: normal;
   font-weight: bold;
 }
-a,p,span,h1,h2,h3,h4,h5,h6 {
+a,p,span,label,input,h1,h2,h3,h4,h5,h6 {
     font-family: $font
 }
