cleaned utility files and added auth to home route

--- a/src/css/components/_profile.scss
+++ b/src/css/components/_profile.scss
@@ -56,6 +56,10 @@
         &--spotify {
             background-color: $spotify ;
         }
+        a {
+            color: $white;
+            text-decoration: none;
+        }
         &:hover {
             cursor: pointer;
         }
