--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -30,10 +30,10 @@
                 <ul>
                     {{#if isAuthenticated}}
                     <li>
-                        <a href="/profile">Profile</a>
+                        <a href="/user/profile">Profile</a>
                     </li>
                     <li>
-                        <a href="/logout">Logout</a>
+                        <a href="/user/logout">Logout</a>
                     </li>
                     {{else}}
                     <li>
