--- a/src/css/components/_grid.scss
+++ b/src/css/components/_grid.scss
@@ -6,7 +6,6 @@ $grid:(columns: 12, gutter: 0);
 
 .main {
     height: 95vh;
-    // padding-top: 80px;
     background-color: $white;
     overflow: hidden;
 
@@ -79,12 +78,15 @@ $grid:(columns: 12, gutter: 0);
             position: relative;
 
             &__container {
-                position: absolute;
+                width: 100%;
+                height: 100%;
+                position: relative;
                 top: 0;
                 bottom: 60px;
                 left: 0;
-                right: -17px;
-                overflow-y: scroll;
+                padding-right: 15px;
+                box-sizing: content-box;
+                overflow: auto;
             }
 
             &__artist {
@@ -92,7 +94,8 @@ $grid:(columns: 12, gutter: 0);
                 align-items: center;
                 height: 60px;
                 width: 100%;
-                padding: 0 25px 0 15px;
+                padding-left: 15px;
+                box-sizing: content-box;
                 border-bottom: 1px solid rgba($black, 0.2);
                 box-shadow: 0 0 2px 0 rgba($black, 0.2);
             }
@@ -102,10 +105,17 @@ $grid:(columns: 12, gutter: 0);
                 width: 45px;
                 height: 45px;
 
-                > img {
+                >img {
                     width: 45px;
                     height: 45px;
                     border-radius: 50%;
+                }
+
+                &--inactive {
+                    width: 45px;
+                    height: 45px;
+                    border-radius: 50%;
+                    background-color: grey;
                 }
             }
 
@@ -118,6 +128,13 @@ $grid:(columns: 12, gutter: 0);
                     font-weight: bold;
                     font-size: 16px;
                     font-size: 16px;
+                }
+
+                &--inactive {
+                    height: 15px;
+                    width: 100%;
+                    max-width: 200px;
+                    background-color: grey;
                 }
             }
 
@@ -141,6 +158,30 @@ $grid:(columns: 12, gutter: 0);
 
                     &:focus {
                         outline: none;
+                    }
+                }
+            }
+
+            &__getartists {
+                @include size(100%);
+                display: flex;
+                @include position(absolute, 0);
+                background-color: rgba(255, 255, 255, 0.9);
+
+                >button {
+                    margin: auto;
+                    border: none;
+                    background-color: transparent;
+                    border: 1px solid black;
+                    padding: 10px;
+
+                    &:hover {
+                        cursor: pointer;
+                    }
+
+                    span {
+                        font-size: 38px;
+                        font-weight: bold;
                     }
                 }
             }
