take ip address and geo coords, added ticketmaster api and example calls.

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -132,7 +132,11 @@
             </div>
             <div class="map">
                 <div class="map__container">
-
+                    {{#if ip }}
+                    <div>
+                        <span> {{ this }}</span>
+                    </div>
+                    {{/if}}
                 </div>
             </div>
         </div>
